2006-08-30  Zack Weinberg  <zackw@panix.com>

	* automate.cc (get_option): Rewrite for revised _MTN/options
	handling.

2006-08-27  Zack Weinberg  <zackw@panix.com>

	Cleanup after merge from mainline.

	* cmd_ws_commit.cc (migrate_workspace): OPT_NONE -> option::none.
	* work.cc: Include ui.hh.
	(workspace::update_current_roster_from_filesystem):
	Remove the overload that doesn't take a node_restriction argument.
	Remove the app_state argument from the overload that does.
	Use ui.prog_name.
	* work_migration.cc: Include ui.hh; not app_state.hh.
	(workspace::check_ws_format): Use ui.prog_name.
	(first_version_supporting_current_format): Will now be 0.30.
	* tester.lua (deltree, _deltree): Delete, unused.
	* tests/migrate_workspace/__driver__.lua: Update for changes in
	mtn status output.

	* automate.cc (inventory)
	* cmd_ws_commit.cc (add): Adjust call to find_unknown_and_ignored.
	* automate.cc (get_revision, get_current_revision_id, get_manifest_of)
	* cmd_merging.cc (update, pluck)
	* work.cc (workspace::maybe_update_inodeprints):
	Call update_current_roster_from_filesystem with a dummy
	node_restriction.
	* cmd_diff_log.cc (diff)
	* cmd_list.cc (ls_changed)
	* cmd_ws_commit.cc (status, commit): Remove last (app_state)
	argument from call to update_current_roster_from_filesystem.
	* app_state.cc (app_state::process_options): Adjust call to
	check_ws_format.

2006-08-08  Zack Weinberg  <zackw@panix.com>

	* tests/migrate_workspace/__driver__.lua: Add migration tests for
	format 1.
	* tests/migrate_workspace/format-1-unmodified
	* tests/migrate_workspace/format-1-rename: New files.
	* tester.lua: Fix some typos.

2006-08-05  Zack Weinberg  <zackw@panix.com>

	* tester.lua (gettree, _gettree, deltree, _deltree): New functions.

2006-08-04  Zack Weinberg  <zackw@panix.com>

	"Full revision in _MTN" transition.  Compiles, passes lua
	testsuite, bizarro failures in unit tests; migration testing needs
	to be implemented.
